--- a/lb2_ora_totvs/templates/totvs12c.dbt.erb
+++ b/lb2_ora_totvs/templates/totvs12c.dbt.erb
@@ -35,7 +35,8 @@
          <initParam name="processes" value="300"/>
          <initParam name="undo_tablespace" value="UNDOTBS1"/>
          <initParam name="diagnostic_dest" value="{ORACLE_BASE}"/>
-         <initParam name="db_recovery_file_dest" value="{ORACLE_BASE}/fast_recovery_area"/>
+         <initParam name="db_recovery_file_dest" value="<%= @recovery_area_destination %>"/>
+            <initParam name="db_create_file_dest" value="<%= @data_file_destination %>"/>
          <initParam name="audit_trail" value="db"/>
          <initParam name="memory_target" value="<%= @memory_total %>" unit="MB"/>
          <initParam name="db_block_size" value="8" unit="KB"/>
